--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
 streamlit
-pandas
-numpy
+matplotlib
 seaborn
-pymongo
-dotenv
 urlextract
 wordcloud
-collections
+pandas
 emoji
-re
-matplotlib.pyplot
